# tryalma

./: .dockerignore  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.windsurf/rules/: main.md  tests.md
alembic/: env.py
alembic/versions/: 20260112_0009_0eedabd9a865_init.py  20260116_1735_9de2520a028e_init.py
configs/: .env.dev  .env.test
deployment/: Dockerfile  Dockerfile.dockerignore
service/: AGENTS.md  container.py  deps.py  scheduler.py  web_app.py
service/api/: AGENTS.md  errors.py
service/api/v1/: router.py
service/database/: AGENTS.md  __init__.py  database.py  helpers.py
service/database/mixins/: metadata.py  primary_keys.py
service/database/models/: __init__.py  attorneys.py  base.py  healthchecks.py  leads.py  types.py
service/general/: auth.py
service/services/: AGENTS.md
service/services/attorneys/: __init__.py  service.py
service/services/blob_storage/: service.py
service/services/email_service/: __init__.py  service.py
service/services/healthcheck/: service.py
service/services/leads/: errors.py  service.py
service/settings/: AGENTS.md  __init__.py  database_settings.py  scheduler_settings.py
service/tasks/: decorators.py  errors.py  healthcheck.py  send_email.py
service/utils/: __init__.py  date_utils.py  loggers.py  sentry.py
tests/: AGENTS.md  conftest.py  helpers.py
tests/api/: conftest.py
tests/database/: fixtures.py
tests/database/attorneys/: fixtures.py
tests/database/leads/: fixtures.py
tests/services/attorneys/: test_service.py
tests/services/leads/: test_service.py
tests/tasks/: test_healthcheck.py  test_send_email.py
(+8 files in other folders)
